fix: text contrast

--- a/_sass/_color.scss
+++ b/_sass/_color.scss
@@ -2,9 +2,9 @@
 
 $system-fonts: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue", Arial,"Noto Sans",sans-serif,"Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
 // 228
-$primary:   hsl(247, 30, 40);
-$secondary: hsl(214, 35, 50);
-$accent:    hsl(220, 35, 50);
+$primary:   hsl(247, 30, 50);
+$secondary: hsl(214, 35, 60);
+$accent:    hsl(220, 35, 60);
 
 $black:    hsl(247,10,10);
 $grey-800: hsl(247,10,20);
